# agentry

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/harness-evaluator/: SKILL.md
.claude/skills/harness-generator/: SKILL.md
.github/workflows/: ci.yml
docs/harness/: STATUS.md  deferred.md  gates.md  sprint-00-contract.md  sprint-01-contract.md
src/agentry/app/: cli.py
src/agentry/application/: eval_runner.py  pipeline.py
src/agentry/core/: models.py  ports.py
src/agentry/entrypoints/: cli.py  composition.py
src/agentry/infrastructure/: audit.py  chroma_store.py  chunking.py  embedders.py  grading.py  llm.py  retriever.py  tracing.py
tests/: test_audit.py  test_eval_runner.py  test_models.py  test_pipeline.py  test_slice_e2e.py
tests/fixtures/: doc1.txt  doc2.txt  doc3.txt  eval.json
